[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/playerselect.gd" type="Script" id=2]
[ext_resource path="res://assets/player-2-marker.png" type="Texture" id=3]
[ext_resource path="res://assets/triangle-portrait.png" type="Texture" id=4]
[ext_resource path="res://assets/player-1-marker.png" type="Texture" id=5]
[ext_resource path="res://assets/circly-portrait.png" type="Texture" id=6]
[ext_resource path="res://assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/backbutton.png" type="Texture" id=8]
[ext_resource path="res://assets/hexagonthumbnail.png" type="Texture" id=9]
[ext_resource path="res://assets/musics/Polytrons_song_mk1.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/Pentagon-thumbnail.png" type="Texture" id=11]
[ext_resource path="res://assets/square-portrait.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Triangle" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Circle" type="Sprite" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 194.887, 42.7149 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Hexagon" type="Sprite" parent="."]
position = Vector2( 200, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="Pentagon" type="Sprite" parent="."]
position = Vector2( 300, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )

[node name="Square" type="Sprite" parent="."]
position = Vector2( 400, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 0, 100 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="p1selector" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 5 )
offset = Vector2( -5, 0 )

[node name="p2selector" type="Sprite" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="player2select" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 0.517647, 0.14902, 1 )
margin_left = 316.0
margin_top = 110.0
margin_right = 452.0
margin_bottom = 186.0
custom_fonts/normal_font = SubResource( 1 )
text = "Player 2 has 
confirmed!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player1select" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 0.14902, 0.454902, 1 )
margin_left = 194.887
margin_top = 110.0
margin_right = 315.887
margin_bottom = 163.0
custom_fonts/normal_font = SubResource( 2 )
text = "Player 1 has
confirmed!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Node" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = -136.244
margin_top = -99.8934
margin_right = -60.2439
margin_bottom = -29.8934
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
